<resources>
    <string name="app_name">BookApp</string>
    <string name="log_in">LOG IN</string>
    <string name="enter_password">Enter Password</string>
    <string name="enter_mobile_number">Enter Mobile Number</string>
    <string name="dashboard">Dashboard</string>
    <string name="favourites">Favourites</string>
    <string name="profile">Profile</string>
    <string name="aboutApp">About App</string>
    <string name="logout">Log out</string>
    <string name="open_drawer">Open Drawer</string>
    <string name="close_drawer">Close Drawer</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>