<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
    <item
        android:icon="@drawable/ic_dashboard"
        android:title="@string/dashboard"
        android:id="@+id/dashboard"/>
    <item
        android:icon="@drawable/ic_favourites"
        android:title="@string/favourites"
        android:id="@+id/favourites"/>
    <item
        android:icon="@drawable/ic_profile"
        android:title="@string/profile"
        android:id="@+id/profile"/>
    <item
        android:icon="@drawable/ic_about_app"
        android:title="@string/aboutApp"
        android:id="@+id/aboutApp"/>
    <item
        android:icon="@drawable/ic_log_out"
        android:title="@string/logout"
        android:id="@+id/logout"/>
    </group>
</menu>